<resources>
    <string name="app_name">Flower-R3</string>
    <string name="app_name_flower">Flower-R3</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="showgraph">Show graph</string>
    <string name="hidegraph">Hide graph</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="configure">Settings</string>
    <string name="configureBT">Device settings</string>
    <string name="action_settings">Settings</string>
    <string name="communicate">Communication</string>
    <string name="scanning">Searching for devices..</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">Select device</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan</string>
    <string name="stopstream">Stop program</string>
    <string name="startstream">Start program</string>
    <string name="configure_device">Configure Shimmer</string>
    <string name="no_bluetooth">The device does not have bluetooth</string>
    <string name="exiting">Closing...</string>
    <string name="todo">TODO</string>
    <string name="Version">V0.1b</string>
    <string name="developed_for">Developed for the BioResponse project</string>
    <string name="email">p.j.f.peters@tue.nl</string>
    <string name="copyright">© Copyright TU/e 2015</string>
    <string name="debug">Debug</string>
    <string name="exit">Exit</string>
    <string name="control">Control</string>
    <string name="refresh">Refresh</string>
</resources>
